page-analyzer/src/main/resources/com/example/views/errors/403.ftl
<#-- @ftlvariable name="errorView" type="com.gigfilter.rest.views.ErrorView" -->
<#import "Layout.ftl" as layout>
<@layout.layout>

<h3> 403 FORBIDDEN</h3>
<h3>Hey, you ain't aloud here. Get out of my yard</h3>

</@layout.layout>